--- a/devslopes-ui-page/main.css
+++ b/devslopes-ui-page/main.css
@@ -8,6 +8,15 @@ body{
     margin: 0;
 }
 
+label {
+    font-size: 35px;
+    font-weight: 600;
+}
+
+p{
+    font-size: 28px;
+}
+
 .container{
     width:100%;
     margin:auto;
@@ -40,6 +49,10 @@ body{
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+
+*{
+    box-sizing: border-box;
+}
 /*####### NAV BAR ##########*/
 nav{
     width: 100%;
@@ -91,6 +104,38 @@ ul.topnav li.dropdownIcon {
     background: linear-gradient(#076DFF, #65a5ff);
 }
 
+div.box {
+    text-align: center;
+    margin: 24px;
+    padding: 36px 24px 40px 24px;
+    border-radius: 7px;
+    background-color: white;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.15),
+        0 2px 3px 0 rgba(0,0,0,.1);
+}
+
+div.icon {
+    width: 100;
+    
+}
+
+button{
+    font-size: 32px;
+    font-weight: 700;
+    color: white;
+    background-color: #0069ff;
+    padding: 15px 60px;
+    display: block;
+    border-radius: 7px;
+    text-align: center;
+    margin: 5px;
+}
+
+button.learnMore {
+    display: block;
+    margin: auto;
+}
+
 div.LeftSide-col {
     margin-left: 30%;
 }
@@ -105,6 +150,11 @@ h1.large {
     font-size: 56px;
     margin: 0;
     line-height: 70px;
+}
+
+h1.section2Header {
+    font-size: 65px;
+    text-align: center;
 }
 
 form h2 {
@@ -149,10 +199,21 @@ ul.topnav.responsive a{
     text-align: left;
 }
 
-.col-6 {
+h1.section2Header {
+      font-size: 50px;  
+    }
+    
+    
+.col-6, .col-4 {
     width: 100%;
     margin: 0;
 }
+    
+div.box {
+    padding: 5px;
+    display: block;
+    }
+    
 div.LeftSide-col, div.rightSide-col {
     margin: 15px;
 }
