--- a/devslopes-ui-page/main.css
+++ b/devslopes-ui-page/main.css
@@ -15,6 +15,12 @@ label {
 
 p{
     font-size: 28px;
+    line-height: 1.2;
+}
+
+article p {
+    font-size: 35px;
+    padding: 20px;
 }
 
 .container{
@@ -113,6 +119,13 @@ div.box {
     box-shadow: 0 0 0 1px rgba(0,0,0,.15),
         0 2px 3px 0 rgba(0,0,0,.1);
 }
+
+div.slopeIcon img {
+    display: block;
+    margin: auto;
+    
+}
+
 
 div.icon {
     width: 100;
